[package]
name = "async-proxy"
version = "0.1.0"
authors = ["Allen Bui <allenbui94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio" }
futures-preview = { version = "0.3.0-alpha.17", features = ["nightly", "async-await"] }
dotenv = "0.14.1"
pin-project = "0.3.3"
